:sparkles: Inputs > Add categories and filters

--- a/sources/index.html
+++ b/sources/index.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <div class="preview">
                         <img class="background" src="ui/whispers/preview.png">
-                        <div class="js-preview-message message title" contenteditable="">Some message</div>
+                        <div class="js-preview-message message title" contenteditable="">Your message here</div>
                     </div>
                     <div class="content">
                         <button class="js-close close">
