--- a/sources/index.html
+++ b/sources/index.html
@@ -36,13 +36,35 @@
     </div>
     
     <div class="game">
-        <div class="js-modals modals ">
+        <div class="js-modals modals is-displayed is-visible">
 
-            <!-- Easter -->
-            <div class="js-modal modal intro " data-name="intro">
+            <!-- Easter end -->
+            <div class="js-modal modal easter-end" data-name="easter-end">
                 <div class="container">
                     <div class="preview">
-                        <img class="background" src="ui/whispers/preview.png">
+                        <img class="background" src="ui/intro/preview.png">
+                    </div>
+                    <div class="content">
+                        <button class="js-close close js-main-focus">
+                            <img src="ui/close.svg">
+                        </button>
+                        <div class="title">You found all the eggs!</div>
+                        <p class="text">Congratulations! You found all the eggs and it only took you <strong class="js-time">XXX minutes XXX seconds</strong></p>
+                        <p class="text">As promised here's your 40% discount code for <a href="https://threejs-journey.com/" target="_blank" rel="noopener noreferrer" class="js-link">Three.js Journey</a>: <strong class="js-code">XXX</strong></p>
+                        <p class="text">I hope you enjoyed this alpha of my portfolio.</p>
+                        <p class="text">Don't forget to follow me on <a href="https://x.com/bruno_simon/" target="_blank" rel="noopener noreferrer">X</a>, <a href="https://bsky.app/profile/bruno-simon.bsky.social" target="_blank" rel="noopener noreferrer">Bluesky</a> and <a href="https://www.youtube.com/c/brunosimon" target="_blank" rel="noopener noreferrer">Youtube</a> for updates about this project.</p>
+                        <p class="text text-faded text-align-right">
+                            — Bruno
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Intro -->
+            <div class="js-modal modal intro is-displayed" data-name="intro">
+                <div class="container">
+                    <div class="preview">
+                        <img class="background" src="ui/intro/preview.png">
                     </div>
                     <div class="content">
                         <button class="js-close close js-main-focus">
@@ -50,14 +72,16 @@
                         </button>
                         <div class="title">Easter egg hunt! <span class="text-faded">(alpha)</span></div>
                         <p class="text">Eggs have been scattered around the world.</p>
-                        <p class="text">Find them all the reveal a 40% discount code for <a href="https://threejs-journey.com/" rel="noopener noreferrer">Three.js Journey</a>!</p>
+                        <p class="text">Find them all to reveal a 40% discount code for <a href="https://threejs-journey.com/" target="_blank" rel="noopener noreferrer">Three.js Journey</a>!</p>
                         <p class="text">This is an <strong>alpha</strong> version of my portfolio:</p>
                         <p class="text text-small text-faded">
                             - Most of the features have been removed<br />
                             - Press T to write whispers (visible by everyone)<br />
                             - Only accessible during the event<br />
-                            - Desktop only<br />
-                            - Discover the development process on <a href="https://www.youtube.com/watch?v=9dhjws3Nops" rel="noopener noreferrer">Youtube</a>
+                            - Desktop only
+                        </p>
+                        <p class="text text-faded text-align-right">
+                            — Bruno
                         </p>
                         <p class="text">
                             <button class="js-close text-close">
@@ -72,7 +96,7 @@
             <div class="js-modal modal controls" data-name="controls">
                 <div class="container">
                     <div class="preview">
-                        <img class="background" src="ui/whispers/preview.png">
+                        <img class="background" src="ui/controls/preview.png">
                     </div>
                     <div class="content">
                         <button class="js-close close js-main-focus">
@@ -86,6 +110,7 @@
                             - <strong>SPACE</strong> to jump<br />
                             - <strong>ENTER</strong> to interact<br />
                             - <strong>T</strong> to post a whisper<br />
+                            - <strong>R</strong> to respawn<br />
                             - <strong>NUMPAD</strong> top activate hydraulics<br />
                         </p>
                         <p class="text text-faded">
