:iphone: Modals > Improve responsiveness

--- a/sources/index.html
+++ b/sources/index.html
@@ -44,6 +44,8 @@
     </div>
     
     <div class="game">
+
+        <!-- Modals -->
         <div class="js-modals modals is-displayed is-visible">
 
             <!-- Easter end -->
@@ -91,7 +93,7 @@
                         <p class="text text-faded text-align-right">
                             — Bruno
                         </p>
-                        <p class="text">
+                        <p class="text start">
                             <button class="js-close text-button">
                                 Start playing
                             </button>
@@ -99,6 +101,10 @@
                                 <img class="audio-on" src="ui/audio/audioOn.svg">
                                 <img class="audio-off" src="ui/audio/audioOff.svg">
                             </button>
+                        </p>
+
+                        <p class="text text-align-center mobile">
+                            <img src="ui/mobile.png">
                         </p>
                     </div>
                 </div>
@@ -167,6 +173,7 @@
             </div>
 
         </div>
+
     </div>
 
     <script type="module" src="./index.js"></script>
