:sparkles: Circuit > Add podium + Circuit > Hide interactive point

--- a/sources/index.html
+++ b/sources/index.html
@@ -229,7 +229,7 @@
                                             <div class="list-item">Boost</div>
                                             <div class="list-item">Jump</div>
                                             <div class="list-item">Brake</div>
-                                            <div class="list-item">Exit</div>
+                                            <div class="list-item">Interact / Exit</div>
                                             <div class="list-item">Accelerate</div>
                                             <div class="list-item">Backward accelerate</div>
                                             <div class="list-item">Hydraulics</div>
