--- a/sources/index.html
+++ b/sources/index.html
@@ -373,7 +373,7 @@
             </div>
 
             <!-- Circuit end -->
-            <div class="js-modal modal circuit-end is-simple" data-name="circuit-end">
+            <div class="js-modal modal circuit-end is-simple" data-name="circuit-end" data-preopen>
                 <div class="container">
                     <div class="content">
                         <button class="js-close js-main-focus close">
@@ -424,6 +424,10 @@
                                     Submit
                                 </button>
                             </form>
+
+                            <div class="or">
+                                or
+                            </div>
 
                             <button class="js-button-restart button">
                                 <svg class="icon icon-restart" width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
