:sparkles: Achievements > Remove dependencies check + Remove areas achievemetns + Add more achievements + :construction: Add honk

--- a/sources/index.html
+++ b/sources/index.html
@@ -224,6 +224,7 @@
                                             <div class="list-item"><strong>R</strong></div>
                                             <div class="list-item"><strong>NUMPAD</strong></div>
                                             <div class="list-item"><strong>LEFT CLICK (DRAG)</strong></div>
+                                            <div class="list-item"><strong>H</strong></div>
                                         </div>
                                         <div class="column">
                                             <div class="list-item">Move around</div>
@@ -235,6 +236,7 @@
                                             <div class="list-item">Respawn</div>
                                             <div class="list-item">Activate hydraulics</div>
                                             <div class="list-item">Move camera</div>
+                                            <div class="list-item">Honk</div>
                                         </div>
                                     </div>
                                 </div>
@@ -276,6 +278,7 @@
                                             <div class="list-item is-gamepad-button is-playstation"><strong>L1 / R1</strong></div>
 
                                             <div class="list-item"><strong>Joystick Left</strong></div>
+                                            <div class="list-item"><strong>Joystick Left (press)</strong></div>
                                             <div class="list-item"><strong>Joystick Right</strong></div>
                                             <div class="list-item"><strong>Joystick Right (press)</strong></div>
                                             <div class="list-item"><strong>Select</strong></div>
@@ -289,7 +292,9 @@
                                             <div class="list-item">Accelerate</div>
                                             <div class="list-item">Backward accelerate</div>
                                             <div class="list-item">Hydraulics</div>
+
                                             <div class="list-item">Turn wheels</div>
+                                            <div class="list-item">Honk</div>
                                             <div class="list-item">Move camera</div>
                                             <div class="list-item">Zoom in/out</div>
                                             <div class="list-item">Reset</div>
