--- a/sources/index.html
+++ b/sources/index.html
@@ -85,7 +85,7 @@
             </div> -->
 
             <!-- Achievements -->
-            <div class="js-modal modal achievements" data-name="achievements" data-preopen> <!-- data-preopen -->
+            <div class="js-modal modal achievements" data-name="achievements"> <!-- data-preopen -->
                 <div class="container">
                     <div class="content">
                         <button class="js-close js-main-focus close">
