:sparkles: Achievements > Rewards > Add tooltips

--- a/sources/index.html
+++ b/sources/index.html
@@ -476,37 +476,43 @@
                                 <div class="rewards-container">
                                     <div class="title">Rewards</div>
                                     <div class="rewards">
-                                        <button class="js-reward reward" data-name="red" data-default>
+                                        <button class="js-reward reward has-tooltip" data-name="red" data-default>
+                                            <div class="js-tooltip tooltip">Unlock at <strong></strong></div>
                                             <img class="picture" src="ui/achievements/rewards/red.webp" loading="lazy">
                                             <div class="lock">
                                                 <img class="lock-icon" src="ui/lock.svg">
                                             </div>
                                         </button>
-                                        <button class="js-reward reward is-locked" data-name="orange">
+                                        <button class="js-reward reward has-tooltip is-locked" data-name="orange">
+                                            <div class="js-tooltip tooltip">Unlock at <strong></strong></div>
                                             <img class="picture" src="ui/achievements/rewards/orange.webp" loading="lazy">
                                             <div class="lock">
                                                 <img class="lock-icon" src="ui/lock.svg">
                                             </div>
                                         </button>
-                                        <button class="js-reward reward is-locked" data-name="white">
+                                        <button class="js-reward reward has-tooltip is-locked" data-name="white">
+                                            <div class="js-tooltip tooltip">Unlock at <strong></strong></div>
                                             <img class="picture" src="ui/achievements/rewards/white.webp" loading="lazy">
                                             <div class="lock">
                                                 <img class="lock-icon" src="ui/lock.svg">
                                             </div>
                                         </button>
-                                        <button class="js-reward reward is-locked" data-name="black">
+                                        <button class="js-reward reward has-tooltip is-locked" data-name="black">
+                                            <div class="js-tooltip tooltip">Unlock at <strong></strong></div>
                                             <img class="picture" src="ui/achievements/rewards/black.webp" loading="lazy">
                                             <div class="lock">
                                                 <img class="lock-icon" src="ui/lock.svg">
                                             </div>
                                         </button>
-                                        <button class="js-reward reward is-locked" data-name="flames">
+                                        <button class="js-reward reward has-tooltip is-locked" data-name="flames">
+                                            <div class="js-tooltip tooltip">Unlock at <strong></strong></div>
                                             <img class="picture" src="ui/achievements/rewards/flames.webp" loading="lazy">
                                             <div class="lock">
                                                 <img class="lock-icon" src="ui/lock.svg">
                                             </div>
                                         </button>
-                                        <button class="js-reward reward is-locked" data-name="abyssal">
+                                        <button class="js-reward reward has-tooltip is-locked" data-name="abyssal">
+                                            <div class="js-tooltip tooltip">Unlock at <strong></strong></div>
                                             <img class="picture" src="ui/achievements/rewards/abyssal.webp" loading="lazy">
                                             <div class="lock">
                                                 <img class="lock-icon" src="ui/lock.svg">
