--- a/sources/index.html
+++ b/sources/index.html
@@ -35,6 +35,16 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Bruno's" />
     <link rel="manifest" href="/favicons/site.webmanifest" />
+    
+    <!-- Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JMSN30BQ5J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', '%VITE_ANALYTICS_TAG%');
+    </script>
 </head>
 <body>
 
